clusters/talos-ottawa/apps/media/app/plex/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: docker.io/plexinc/pms-docker:1.43.1.10576-06378bdcd
          resources:
            requests:
              gpu.intel.com/i915: "25"
            limits:
              gpu.intel.com/i915: "25"
          imagePullPolicy: Always
          ports:
            - containerPort: 32400
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-volume
              mountPath: /media-share
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config  
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-share
