clusters/talos-ottawa/apps/media/app/plex/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: media
  labels:
    app: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      resourceClaims:
        - name: gpu
          resourceClaimTemplateName: plex-gpu
      containers:
        - name: plex
          image: ghcr.io/home-operations/plex-next:1.43.2.10687
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          resources:
            claims:
              - name: gpu
          ports:
            - containerPort: 32400
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-volume
              mountPath: /media-share
            - name: tmpfs
              mountPath: /config/Library/Application Support/Plex Media Server/Logs
              subPath: logs
            - name: tmpfs
              mountPath: /transcode
              subPath: transcode
            - name: tmpfs
              mountPath: /tmp
              subPath: tmp
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-share
        - name: tmpfs
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  selector:
    app: plex
  type: LoadBalancer
  loadBalancerIP: ${CLUSTER_LOAD_BALANCER_CIDR%.*.*/*}.10.32
  ports:
    - name: plex-tcp-32400
      port: 32400
      protocol: TCP
      targetPort: 32400
    - name: plex-udp-1900
      port: 1900
      protocol: UDP
      targetPort: 1900
    - name: plex-tcp-3005
      port: 3005
      protocol: TCP
      targetPort: 3005
    - name: plex-udp-5353
      port: 5353
      protocol: UDP
      targetPort: 5353
    - name: plex-tcp-8324
      port: 8324
      protocol: TCP
      targetPort: 8324
    - name: plex-udp-32410
      port: 32410
      protocol: UDP
      targetPort: 32410
    - name: plex-udp-32412
      port: 32412
      protocol: UDP
      targetPort: 32412
    - name: plex-udp-32413
      port: 32413
      protocol: UDP
      targetPort: 32413
    - name: plex-udp-32414
      port: 32414
      protocol: UDP
      targetPort: 32414
    - name: plex-tcp-32469
      port: 32469
      protocol: TCP
      targetPort: 32469
